[workspace]
resolver = "2"
members = [
  "satori-common",
  "satori-storage",

  "satori-testing-utils",

  "satori-agent",
  "satori-archiver",
  "satori-event-processor",
  "satorictl",

  "satori-integration-tests",
]

[workspace.package]
license = "MIT"
version = "0.3.1"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
bytes = { version = "1.10.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.4.18", features = ["cargo", "derive", "env", "string"] }
ctor = "0.6.0"
futures = "0.3.31"
git-version = "0.3.9"
m3u8-rs = "6.0.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
miette = "7.6.0"
nix = { version = "0.30.1", features = ["process", "signal"] }
rand = "0.8.5"
regex = "1.11.3"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
rumqttc = "0.25.0"
satori-common = { path = "./satori-common" }
satori-storage = { path = "./satori-storage" }
satori-testing-utils = { path = "./satori-testing-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14"
tempfile = "3.23.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "process"] }
toml = "0.9.7"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.5", features = ["serde"] }
