[workspace]
resolver = "2"
members = [
  "satori-common",

  "satori-storage",
  "satori-storage-cli",

  "satori-testing-utils",

  "satori-agent",
  "satori-archiver",
  "satori-event-processor",

  "satori-integration-tests",
]

[workspace.package]
license = "MIT"
version = "0.3.1"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
bytes = { version = "1.11.1", features = ["serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.4.18", features = ["cargo", "derive", "env", "string"] }
ctor = "0.6.3"
futures = "0.3.31"
git-version = "0.3.9"
m3u8-rs = "6.0.0"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
miette = "7.6.0"
nix = { version = "0.30.1", features = ["process", "signal"] }
object_store = { version = "0.13.1", features = ["aws"] }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
satori-common = { path = "./satori-common" }
satori-storage = { path = "./satori-storage" }
satori-testing-utils = { path = "./satori-testing-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16"
tempfile = "3.24.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "process", "time"] }
toml = "0.9.11"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.5", features = ["serde"] }
