[package]
name = "satori-agent"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
byte-unit.workspace = true
clap.workspace = true
kagiyama.workspace = true
nix.workspace = true
regex.workspace = true
satori-common.workspace = true
serde.workspace = true
serde_with.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
