[package]
name = "satori-archiver"
version.workspace = true
edition.workspace = true

[dependencies]
satori-common = { path = "../common" }
satori-storage = { path = "../storage" }

bytes = "1.3.0"
clap = { version = "4.0", features = ["derive", "env"] }
git-version = "0.3.5"
mqtt-channel-client = { version = "0.5.0", features = ["metrics"] }
kagiyama = "0.3.0"
reqwest = "0.11.13"
rust-s3 = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
futures = "0.3.25"

[dev-dependencies]
chrono = "0.4.23"
