[package]
name = "satori-archiver"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
satori-common = { path = "../common" }
satori-storage = { path = "../storage" }

bytes = "1.3.0"
clap = { version = "4.0", features = ["derive", "env"] }
mqtt-channel-client.workspace = true
kagiyama = "0.3.0"
reqwest = "0.11.13"
rust-s3 = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
futures = "0.3.25"

[dev-dependencies]
chrono = "0.4.23"
