[package]
name = "satori-archiver"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
clap.workspace = true
futures.workspace = true
kagiyama.workspace = true
reqwest.workspace = true
rumqttc.workspace = true
satori-common.workspace = true
satori-storage.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
chrono.workspace = true
