[package]
name = "satori-common"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
mqtt-channel-client.workspace = true
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "3.0"
toml.workspace = true
tracing = "0.1"
url = { version = "2.3", features = ["serde"] }
