[package]
name = "satori-common"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
mqtt-channel-client.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
