[package]
name = "satorictl"
version.workspace = true
edition.workspace = true

[dependencies]
satori-common = { path = "../common" }
satori-storage = { path = "../storage" }

async-trait = "0.1.68"
chrono = "0.4.23"
clap = { version = "4.0", features = ["derive", "env"] }
crossterm = "0.25"
git-version = "0.3.5"
mqtt-channel-client = "0.5.0"
ratatui = { version = "0.21.0", features = ["all-widgets"]}
rayon = "1.7.0"
serde_json = "1.0.91"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
