[package]
name = "satorictl"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
mqtt-channel-client.workspace = true
ratatui.workspace = true
rayon.workspace = true
satori-common.workspace = true
satori-storage.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
