[package]
name = "satori-event-processor"
version = "0.0.1"
edition = "2021"

[dependencies]
satori-common = { path = "../common" }

bytes = "1.3"
chrono = "0.4.23"
clap = { version = "4.0", features = ["derive", "env"] }
kagiyama = "0.2.0"
m3u8-rs = "5.0.3"
nom = "7.1.2"
mqtt-channel-client = "0.4"
paho-mqtt = "0.11"
prometheus-client = "0.19.0"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.1"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
