[package]
name = "satori-event-processor"
version.workspace = true
edition.workspace = true

[dependencies]
satori-common = { path = "../common" }

bytes = "1.3"
chrono = "0.4.23"
clap = { version = "4.0", features = ["derive", "env"] }
git-version = "0.3.5"
kagiyama = "0.3.0"
m3u8-rs = "5.0.3"
nom = "7.1.2"
mqtt-channel-client = "0.5.0"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
