[package]
name = "satori-agent"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures = "0.3.31"
git-version.workspace = true
m3u8-rs.workspace = true
metrics-exporter-prometheus.workspace = true
metrics.workspace = true
miette = { workspace = true, features = ["fancy"] }
nix = { version = "0.30.1", features = ["process", "signal"] }
regex = "1.11.3"
satori-common.workspace = true
serde.workspace = true
serde_with.workspace = true
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio.workspace = true
tower-http = { version = "0.6.6", features = ["fs"] }
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serde_urlencoded = "0.7"
