[package]
name = "satori-agent"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
git-version.workspace = true
m3u8-rs.workspace = true
metrics-exporter-prometheus.workspace = true
metrics.workspace = true
miette = { workspace = true, features = ["fancy"] }
nix.workspace = true
regex.workspace = true
satori-common.workspace = true
serde.workspace = true
serde_with.workspace = true
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serde_urlencoded = "0.7"
