[package]
name = "satori-archiver"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
clap.workspace = true
git-version.workspace = true
metrics-exporter-prometheus.workspace = true
metrics.workspace = true
miette = { workspace = true, features = ["fancy"] }
reqwest.workspace = true
rumqttc.workspace = true
satori-common.workspace = true
satori-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
