[package]
name = "satori-archiver"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
clap.workspace = true
git-version.workspace = true
metrics-exporter-prometheus.workspace = true
metrics.workspace = true
miette = { workspace = true, features = ["fancy"] }
reqwest.workspace = true
satori-common.workspace = true
satori-storage.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unused_results = "warn"
unused-crate-dependencies = "deny"
