[package]
name = "satori-common"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
git-version = "0.3.9"
m3u8-rs.workspace = true
miette.workspace = true
regex = "1.11.3"
rumqttc.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
toml = "0.9.7"
tracing.workspace = true
url.workspace = true

[dev-dependencies]
ctor.workspace = true
satori-testing-utils.workspace = true
tracing-subscriber.workspace = true
