[package]
name = "satori-common"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
m3u8-rs.workspace = true
miette.workspace = true
regex.workspace = true
serde.workspace = true
serde_with.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unused-crate-dependencies = "deny"
