[package]
name = "satori-event-processor"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
m3u8-rs.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
reqwest.workspace = true
rumqttc.workspace = true
satori-common.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
