[package]
name = "satori-event-processor"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
git-version.workspace = true
m3u8-rs.workspace = true
metrics-exporter-prometheus.workspace = true
metrics.workspace = true
miette = { workspace = true, features = ["fancy"] }
reqwest.workspace = true
rumqttc.workspace = true
satori-common.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.6", features = ["fs"] }
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
