[package]
name = "satori-event-processor"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
clap.workspace = true
git-version.workspace = true
m3u8-rs.workspace = true
metrics-exporter-prometheus.workspace = true
metrics.workspace = true
miette = { workspace = true, features = ["fancy"] }
reqwest.workspace = true
satori-common.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unused_results = "warn"
unused-crate-dependencies = "deny"
