[package]
name = "satori-integration-tests"
license.workspace = true
version.workspace = true
edition.workspace = true

[dev-dependencies]
ctor.workspace = true
indoc = "2.0.7"
reqwest.workspace = true
rumqttc.workspace = true
satori-testing-utils.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unused-crate-dependencies = "deny"
