[package]
name = "satori-storage-cli"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm = "0.29.0"
git-version.workspace = true
hpke = { version = "0.11.0", features = ["std"] }
miette = { workspace = true, features = ["fancy"] }
pem-rfc7468 = { version = "0.7.0", features = ["alloc"] }
rand.workspace = true
ratatui = { version = "0.29.0", features = ["all-widgets"]}
rayon = "1.11.0"
satori-common.workspace = true
satori-storage.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unused-crate-dependencies = "deny"

[dev-dependencies]
hex = "0.4.3"
toml.workspace = true
