[package]
name = "satori-storage"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-channel = "2.5.0"
bytes.workspace = true
chrono.workspace = true
ciborium = "0.2.2"
futures.workspace = true
generic-array = { version = "0.14.7", features = ["serde"] }
hpke = { version = "0.13.0", features = ["std"] }
object_store.workspace = true
rand.workspace = true
satori-common.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.17"
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
zeroize = "1.8.2"

[dev-dependencies]
ctor.workspace = true
lazy_static = "1.5.0"
satori-testing-utils.workspace = true
temp-env = "0.3.6"
tempfile.workspace = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unused-crate-dependencies = "deny"
