[package]
name = "satori-storage"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = "0.11.0-rc.3"
async-channel = "2.5.0"
bytes.workspace = true
chrono.workspace = true
ciborium = "0.2.2"
futures.workspace = true
hybrid-array = { version = "0.4.6", features = ["serde"] }
object_store.workspace = true
rand.workspace = true
satori-common.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.18"
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
ctor.workspace = true
lazy_static = "1.5.0"
satori-testing-utils.workspace = true
temp-env = "0.3.6"
tempfile.workspace = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unused-crate-dependencies = "deny"
