[package]
name = "satori-testing-utils"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
m3u8-rs.workspace = true
nix.workspace = true
rand.workspace = true
reqwest.workspace = true
rumqttc.workspace = true
satori-common.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
ctor.workspace = true
tracing-subscriber.workspace = true
