[package]
name = "satori-testing-utils"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
m3u8-rs.workspace = true
nix = { version = "0.30.1", features = ["process", "signal"] }
rand = "0.8.5"
reqwest.workspace = true
rumqttc.workspace = true
rust-s3 = { version = "0.37.0", default-features = false, features = ["tokio-rustls-tls"] }
satori-common.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
ctor.workspace = true
tracing-subscriber.workspace = true
