[package]
name = "satori-testing-utils"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
m3u8-rs.workspace = true
nix.workspace = true
rand.workspace = true
reqwest.workspace = true
rust-s3 = { version = "0.37.0", default-features = false, features = ["tokio-rustls-tls"] }
satori-common.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
unused-crate-dependencies = "deny"
