[package]
name = "satorictl"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
miette = { workspace = true, features = ["fancy"] }
ratatui.workspace = true
rayon.workspace = true
satori-common.workspace = true
satori-storage.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
