[package]
name = "satorictl"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm = "0.29.0"
git-version.workspace = true
miette = { workspace = true, features = ["fancy"] }
ratatui = { version = "0.29.0", features = ["all-widgets"]}
rayon = "1.11.0"
satori-common.workspace = true
satori-storage.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
