[package]
name = "satori-storage-cli"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
rayon.workspace = true
satori-common.workspace = true
satori-storage.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
