[package]
name = "satori-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
satori-common = { path = "../common" }

async-trait = "0.1.60"
bytes = { version = "1.3.0", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
rust-s3 = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tracing = "0.1"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.4.0"
tokio = { version = "1.26", features = ["macros"] }
