[package]
name = "satori-storage"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.60"
bytes = { version = "1.3.0", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
ciborium = "0.2.1"
hpke = { version = "0.11.0", features = ["std", "serde_impls"] }
pem-rfc7468 = { version = "0.7.0", features = ["alloc"] }
rand = "0.8.5"
rust-s3 = "0.33"
satori-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
toml.workspace = true
tracing = "0.1"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
tempfile = "3.4.0"
tokio = { version = "1.26", features = ["macros"] }
