[package]
name = "satori-web"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
satori-common.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
